tests/suite/snapshots/suite__check__tests__check__bad_final_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_final_4_2.ixi:1:13]
   │
 1 │ final class A {}
   ·             ┬  
   ·             ╰── Inconsistent `final` annotation on class
   │
   ├─[tests/check/bad_final_4_1.ixi:1:7]
   │
 1 │ class A {}
   ·       ┬  
   ·       ╰── Previous definition here
───╯

