tests/suite/snapshots/suite__check__tests__check__bad_final_9.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_final_9.xi:3:29]
   │
 1 │ final class A {}
   ·             ┬  
   ·             ╰── Class defined here
   · 
 3 │ template class B<T> extends A {}
   ·                             ┬  
   ·                             ╰── Class A is declared final and cannot be extended
   · 
 6 │     b: B::<int> = new B::<int>
   ·        ────┬───  
   ·            ╰───── Template instantiated here
───╯

