tests/suite/snapshots/suite__check__tests__check__bad_func_multi_return_01.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_func_multi_return_01.xi:2:5]
   │
 2 │     return new A, new B, new A, new B
   ·     ────────────────┬────────────────  
   ·                     ╰────────────────── Return mismatch
───╯

