tests/suite/snapshots/suite__check__tests__check__bad_generic_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
    ╭─[tests/check/bad_generic_2.xi:2:12]
    │
  2 │     return argument + argument
    ·            ────┬───  
    ·                ╰───── Expected int but found bool
    · 
  6 │     return foo::<T>(argument)
    ·            ────┬───  
    ·                ╰───── Template instantiated here
    · 
 11 │     b: bool = bar::<bool>(true);
    ·               ─────┬─────  
    ·                    ╰─────── Template instantiated here
────╯

